--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,160 +1,62 @@
-@import './_reset.scss';
+@import "./_reset.scss";
+@import "./_fonts.scss";
+@import "./_colors.scss";
+// @import "./_easings.scss";
+// @import "./_functions.scss";
+// @import "./_layout.scss";
+// @import "./_utils.scss";
+// @import "./_font-style.scss";
+// @import "./_themes.scss";
+// @import "./_scroll.scss";
 
-@font-face {
-  font-family: 'Denim';
-  src: url('/DenimINKTRIALVF.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Matter';
-  src: url('/MatterSQMonoTRIALVF-Uprights.ttf') format('truetype');
-}
+// :root {
+//   --header-height: #{mobile-vw(58px)};
 
-:root {
-  --max-width: 1100px;
-  --border-radius: 24px;
-  --font-primary: 'Denim', 'Helvetica', 'Arial', sans-serif;
-  --font-mono: 'Matter', 'Segoe UI Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  /* COLORS */
-
-  /* pothos theme */
-  --pothos-500: #ccff00;
-
-  /* blue theme */
-  --primary-500: #3300ff;
-  --secondary-500: #00ffff;
-  --off-black: #000038;
-  --off-white: #000038;
-  --pure-white: #ffffff;
-  --pure-black: #000000;
-  --page-background: #ebffff;
-  --font-black: var(--off-black);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-@media (prefers-color-scheme: light) {
-  :root {
-    --foreground-rgb: 235, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
+//   @include desktop {
+//     --header-height: #{desktop-vw(98px)};
+//   }
+// }
 
 html,
 body {
-  width: 100%;
-  height: 100%;
-  /* max-width: 100vw; */
-  /* overflow-x: hidden; */
+  overscroll-behavior: none;
 }
 
 body {
-  background: var(--page-background);
-  color: rgb(var(--off-black));
-}
-/* 
-  @media (prefers-color-scheme: dark) {
-    html {
-      color-scheme: dark;
-    }
-  } */
-
-h1 {
-  font-family: var(--font-primary);
+  min-height: 100vh;
 }
 
-h3 {
-  color: var(--off-black);
-  font-size: 1.33rem;
-  font-weight: 500;
-  font-variation-settings: 'wght' 500;
-  line-height: 133%; /* 1.5rem */
-  letter-spacing: 0.075rem;
-  text-transform: uppercase;
-}
-
-ul {
-  list-style-type: none;
-}
-
-li {
-  color: var(--off-black, #242d00);
-  font-family: var(--font-mono);
-
-  list-style: none;
-  font-size: 1rem;
-  font-style: normal;
-  font-variation-settings: 'wght' 500;
-  /* line-height: 2.2rem; */
-  letter-spacing: -0.05rem;
-  text-transform: uppercase;
-}
-
-a {
-  color: var(--blue-500);
+a,
+button,
+input,
+label,
+textarea,
+select {
+  color: inherit;
   cursor: pointer;
 }
 
-a:hover {
-  color: var(--secondary-color);
+*::selection {
+  background-color: var(--theme-secondary);
+  color: var(--theme-primary);
 }
 
-p {
-  color: var(--font-black);
-  font-family: 'Denim';
-  font-size: 1.11rem;
-  font-style: normal;
-  font-variation-settings: 'wght' 500;
-  line-height: 111%; /* 1.665rem */
-  letter-spacing: -0.03rem;
+svg.icon {
+  path[fill],
+  rect[fill],
+  circle[fill] {
+    fill: currentColor;
+  }
+
+  path[stroke],
+  rect[stroke],
+  circle[stroke] {
+    stroke: currentColor;
+  }
+}
+
+.link {
+  &:hover {
+    color: var(--theme-contrast);
+  }
 }
