--- a/src/app/styles/_fonts.scss
+++ b/src/app/styles/_fonts.scss
@@ -3,7 +3,7 @@
   src: url("/fonts/Px/Px-Grotesk-Regular.ttf") format("truetype"),
     url("/fonts/Px/Px-Grotesk-Light.ttf") format("truetype"),
     url("/fonts/Px/Px-Grotesk-Bold.ttf") format("truetype");
-  font-display: swap;
+  // font-display: swap;
 }
 
 :root {
