--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,11 +1,11 @@
 @import "./_reset.scss";
 @import "./_fonts.scss";
 @import "./_colors.scss";
+@import "./_font-style.scss";
 // @import "./_easings.scss";
 // @import "./_functions.scss";
 // @import "./_layout.scss";
 // @import "./_utils.scss";
-// @import "./_font-style.scss";
 // @import "./_themes.scss";
 // @import "./_scroll.scss";
 
@@ -59,4 +59,7 @@ svg.icon {
   &:hover {
     color: var(--theme-contrast);
   }
+}
+
+body {
 }
