--- a/src/app/components/Row/row.module.scss
+++ b/src/app/components/Row/row.module.scss
@@ -1,10 +1,12 @@
 .row {
   position: relative;
-  height: 3rem;
+  min-height: 3rem;
   display: flex;
   justify-content: space-between;
   border-top: 1px solid black;
+  transition: 1s;
 }
+
 .title {
   line-height: 3rem;
 }
@@ -14,4 +16,10 @@
   // right: 0;
   bottom: 0.5rem;
   right: 0;
+}
+
+.childrenContainer {
+  // width: 100%;
+  display: flex;
+  flex-direction: row;
 }
