--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,59 +1,38 @@
 .gridContainer {
   width: 100vw;
   height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  display: flex;
+  // grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  // grid-template-columns: 1fr 560px;
+  overflow: hidden;
 }
-
 .content {
   display: flex;
   flex-direction: column;
-  grid-column: 1 / 3;
-  // align-items: center;
+  // grid-column: 1 / 3;
+  flex: 1 1 auto;
+  height: 100vh;
+  overflow-y: auto;
 
   padding: 3rem;
 
   // outline: 1px solid black;
-}
 
-.pane {
-  // width: 100%;
-  // height: 100%;
-  grid-column: 3 / -1;
-  display: grid;
-  // outline: 1px solid black;
-  margin-top: 1px;
-  margin-left: 1px;
-
-  grid-template-rows: repeat(4, 1fr); /* 2 rows */
-
-  .top {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    grid-row: 1 / 3;
-    margin-top: -1px;
-
-    outline: 1px solid black;
+  &::-webkit-scrollbar {
+    width: 3px; // Width of the scrollbar
   }
-  .bottom {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    grid-row: 3 / -1;
-    margin-top: 1px;
-    outline: 1px solid black;
-  }
-}
 
-.navSwitcher {
-  display: flex;
-  // width: 100%;
-  // justify-content: space-between;
-  max-width: 20rem;
-  gap: 1rem;
-  margin-bottom: 3rem;
+  &::-webkit-scrollbar-track {
+    background: "#fcfcfcfc"; // Color of the track
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: "#000000"; // Color of the scroll thumb
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: #555555; // Color of the scroll thumb on hover
+  }
 }
 
 .contentBlock {
