prepping final sidepane. work detail implementation done

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,45 +2,21 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  // grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  // grid-template-columns: 1fr 560px;
   overflow: hidden;
+  overscroll-behavior: none;
 }
 .content {
   display: flex;
   flex-direction: column;
-  // grid-column: 1 / 3;
   flex: 1 1 auto;
   height: 100vh;
+
   overflow-y: auto;
-
   padding: 3rem;
-
-  // outline: 1px solid black;
-
-  &::-webkit-scrollbar {
-    width: 3px; // Width of the scrollbar
+  @media (max-width: 768px) {
+    padding: 0rem;
+    h3 {
+      line-height: 100%;
+    }
   }
-
-  &::-webkit-scrollbar-track {
-    background: "#fcfcfcfc"; // Color of the track
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: "#000000"; // Color of the scroll thumb
-  }
-
-  &::-webkit-scrollbar-thumb:hover {
-    background: #555555; // Color of the scroll thumb on hover
-  }
-}
-
-.contentBlock {
-  // height: 0%;
-  // width: 100%;
-  max-width: 1440px;
-  margin: 1.5rem;
-  background: #00000022;
-  grid-template-columns: repeat(48px);
-  grid-template-rows: repeat(48px);
 }
