--- a/src/components/Row/row.module.scss
+++ b/src/components/Row/row.module.scss
@@ -4,11 +4,12 @@
   display: flex;
   justify-content: space-between;
   border-top: 1px solid black;
-  transition: 0.33s;
+  transition: 0.22s;
   transition-timing-function: ease-out;
 
   &:hover {
-    background-color: #00000011;
+    background-color: #000000;
+    color: white;
   }
 }
 
