--- a/src/app/work/layout.module.scss
+++ b/src/app/work/layout.module.scss
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: lime;
   height: 100vh;
   overflow-y: auto;
+}
+
+.container {
+  margin-top: 3rem;
 }
