--- a/src/components/HeroTable/heroTable.module.scss
+++ b/src/components/HeroTable/heroTable.module.scss
@@ -1,9 +1,10 @@
 .tableContainer {
-  padding: 0.5rem;
+  // padding: 0.5rem;
 }
 .tableHeader {
   height: 100%;
   max-height: 3rem;
+  padding: 0 0.5rem;
   display: flex;
   justify-content: space-between;
 }
