--- a/src/components/Row/row.module.scss
+++ b/src/components/Row/row.module.scss
@@ -4,12 +4,14 @@
   display: flex;
   justify-content: space-between;
   border-top: 1px solid black;
-  transition: 0.22s;
+  transition: 0.44s;
   transition-timing-function: ease-out;
+  padding: 3rem 0.5rem 3rem 1rem;
 
   &:hover {
-    background-color: #000000;
-    color: white;
+    // background-color: #000000;
+    // color: white;
+    background-color: var(--hover-color);
   }
 }
 
