--- a/src/components/Sidepane/sidepane.module.scss
+++ b/src/components/Sidepane/sidepane.module.scss
@@ -1,5 +1,5 @@
 .pane {
-  flex: 0 0 33vw;
+  flex: 0 0 400px;
   height: 100vh;
   display: grid;
 
@@ -7,7 +7,8 @@
   margin-left: 1px;
   grid-template-rows: repeat(4, 1fr);
 
-  @media (max-width: 768px) {
+  @media (max-width: var(--tablet)) {
+    background-color: lime;
     max-height: 3.5rem;
     position: fixed;
     top: 0;
@@ -25,7 +26,7 @@
     outline: 1px solid black;
     backdrop-filter: blur(11px);
 
-    @media (max-width: 768px) {
+    @media (max-width: var(--tablet)) {
       height: 3.5rem;
     }
     .navSwitcher {
@@ -41,7 +42,7 @@
 
     outline: 1px solid black;
 
-    @media (max-width: 768px) {
+    @media (max-width: var(--tablet)) {
       height: 3.5rem;
     }
     .navSwitcher {
@@ -56,7 +57,7 @@
     outline: 1px solid black;
     padding: 2rem;
 
-    @media (max-width: 768px) {
+    @media (max-width: var(--tablet)) {
       display: none;
     }
   }
@@ -68,7 +69,7 @@
     outline: 1px solid black;
     padding: 2rem;
 
-    @media (max-width: 768px) {
+    @media (max-width: var(--tablet)) {
       height: 3.5rem;
     }
     .navSwitcher {
