--- a/src/components/HeroTable/heroTable.module.scss
+++ b/src/components/HeroTable/heroTable.module.scss
@@ -7,4 +7,8 @@
   padding: 0 0.5rem;
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: 835px) {
+    min-height: 1rem;
+  }
 }
