--- a/src/components/Row/row.module.scss
+++ b/src/components/Row/row.module.scss
@@ -17,7 +17,13 @@
 }
 
 .title {
+  width: 100%;
   line-height: 3rem;
+}
+
+.attr {
+  text-align: right;
+  width: 100%;
 }
 .plusButton {
   position: absolute;
