--- a/src/components/Row/row.module.scss
+++ b/src/components/Row/row.module.scss
@@ -14,6 +14,10 @@
     // background-color: rgba(var(--hover-color), 0.22);
     background-color: #ccff00;
   }
+
+  @media (max-width: 835px) {
+    padding: 3rem 1rem 3rem 2rem;
+  }
 }
 
 .title {
