--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -4,6 +4,8 @@ $colors: (
   black: "#000000",
   white: "#F6F5F2",
   pothos: "#ccff00",
+  pothos-black: "#0C0F00",
+  pothos-white: "#FBFFEB",
 );
 
 :root {
