--- a/src/app/test/page.module.scss
+++ b/src/app/test/page.module.scss
@@ -1,18 +1,19 @@
 .container {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
   margin-right: -1px;
   overflow: hidden;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
 }
 .studioLink {
   width: 100%;
-  height: 50%;
+  grid-row: 1 / 3;
   border: 1px solid black;
   //   background-color: #fff;
-  margin-bottom: -1px;
+  // margin-bottom: -11px;
   padding: 1rem 0 0 1rem;
+  margin-bottom: -2px;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -55,10 +56,13 @@
 
 .recordsLink {
   width: 100%;
-  height: 50%;
+  // height: 50%;
   border: 1px solid black;
 
+  grid-row: 3 / -1;
+
   display: flex;
+  margin-top: 1px;
 
   align-items: center;
   margin-right: 1px;
