--- a/src/components/WorkNav/workNav.module.scss
+++ b/src/components/WorkNav/workNav.module.scss
@@ -1,5 +1,5 @@
 .navbar {
-  height: 3rem;
+  height: calc(3rem + 1px);
   position: fixed;
   backdrop-filter: blur(10px);
   width: calc(100vw - 401px);
@@ -7,10 +7,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  // padding-bottom: 15px;
 
+  border-bottom: 1px solid var(--theme-primary);
   button {
+    height: calc(3rem + 1px);
     background-color: #fff;
     padding: 0.5rem 2rem;
     border: 1px solid #000;
+
+    &:hover {
+      background-color: var(--theme-contrast);
+    }
   }
 }
