lol landing page up

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,7 +1,7 @@
 .gridContainer {
   width: 100vw;
   height: 100vh;
-  display: flex;
+  // display: flex;
   overflow: hidden;
   overscroll-behavior: none;
   background-color: var(--theme-secondary);
