--- a/src/app/work/layout.module.scss
+++ b/src/app/work/layout.module.scss
@@ -1,11 +1,10 @@
 .layout {
-  display: flex;
-  flex-direction: column;
+  // display: flex;
+  // flex-direction: column;
   width: 100%;
   height: 100vh;
   overflow-y: auto;
 }
 
 .container {
-  margin-top: 3rem;
 }
