--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,12 +1,12 @@
 $themes: (
   light: (
-    primary: #fbffeb,
+    primary: #ebf3ce,
     secondary: #0c0f00,
-    contrast: #ccff00,
+    contrast: #d4ff00,
   ),
   dark: (
     primary: #0c0f00,
-    secondary: #fbffeb,
-    contrast: #ccff00,
+    secondary: #ebf3ce,
+    contrast: #d4ff00,
   ),
 );
