--- a/src/components/ContentContainer/ContentContainer.module.scss
+++ b/src/components/ContentContainer/ContentContainer.module.scss
@@ -1,5 +1,6 @@
 .contentContainer {
   // width: calc(100vw - 3.5rem);
   height: calc(100vh - 3.5rem);
+  pointer-events: none;
   margin: 3.5rem 3.5rem 0 0;
 }
