--- a/src/components/GlobalNav/globalNav.module.scss
+++ b/src/components/GlobalNav/globalNav.module.scss
@@ -8,8 +8,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 1111;
   border-bottom: 1px solid #000;
+  pointer-events: none;
+  background-color: var(--theme-secondary);
 }
 
 .logo {
@@ -27,6 +29,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 10;
+  z-index: 1111;
+  background-color: var(--theme-secondary);
   border-left: 1px solid #000;
 }
