--- a/src/components/HomeHero/HomeHero.module.scss
+++ b/src/components/HomeHero/HomeHero.module.scss
@@ -13,11 +13,29 @@
 
   h1 {
     color: var(--theme-primary);
-    font-family: "JetBrains Mono";
+    font-family: "Jetbrains Mono";
     font-size: 3rem;
     font-style: normal;
     font-weight: 400;
     line-height: 3rem;
     text-transform: uppercase;
   }
+}
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.text {
+  font-size: 6rem;
+  font-family: "Jetbrains Mono";
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #64694f;
+  background-color: #ccff00;
+  padding: 0.11rem 0.44rem; /* Adjust padding as needed */
+  box-decoration-break: clone; /* Ensures the padding and background span across lines for multiline highlights */
+  -webkit-box-decoration-break: clone;
+  margin-bottom: -1.1rem;
 }
