--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,8 @@
 @import "./_layout.scss";
 @import "./_utils.scss";
 @import "./_themes.scss";
+@import "./_vars.scss";
+
 // @import "./_scroll.scss";
 
 // :root {
@@ -23,8 +25,8 @@ body {
 }
 
 body {
-  min-height: 100vh;
-  background-color: var(--theme-contrast);
+  // min-height: 100vh;
+  background-color: #ebf3ce;
 }
 
 a,
